# mproc

./: CMakeLists.txt
include/: dirs_table.hpp  main.hpp  stdc++.hpp  sysinfo.hpp  utils.hpp
script/: build.sh  test.sh
src/: main.cpp  sysinfo.cpp  utils.cpp
